feat: add observability

--- a/src/ApiTemplate.API/appsettings.Development.json
+++ b/src/ApiTemplate.API/appsettings.Development.json
@@ -14,5 +14,20 @@
         "Microsoft.EntityFrameworkCore": "Information"
       }
     }
+  },
+  "ElasticApm": {
+    "ServiceName": "ApiTemplate",
+    "ServiceVersion": "1.0.0-dev",
+    "ServerUrl": "http://localhost:8200",
+    "Environment": "Development",
+    "LogLevel": "Debug",
+    "CaptureBody": "all",
+    "CaptureHeaders": true
+  },
+  "Elasticsearch": {
+    "Uri": "http://localhost:9200",
+    "IndexFormat": "apitemplate-dev-logs-{0:yyyy.MM.dd}",
+    "Username": "",
+    "Password": ""
   }
 }
