--- a/src/ApiTemplate.API/appsettings.json
+++ b/src/ApiTemplate.API/appsettings.json
@@ -18,5 +18,18 @@
         "Microsoft.EntityFrameworkCore": "Warning"
       }
     }
+  },
+  "ElasticApm": {
+    "ServiceName": "ApiTemplate",
+    "ServiceVersion": "1.0.0",
+    "ServerUrl": "http://localhost:8200",
+    "Environment": "Development",
+    "LogLevel": "Information"
+  },
+  "Elasticsearch": {
+    "Uri": "http://localhost:9200",
+    "IndexFormat": "apitemplate-logs-{0:yyyy.MM.dd}",
+    "Username": "",
+    "Password": ""
   }
 }
