--- a/src/ApiTemplate.API/appsettings.json
+++ b/src/ApiTemplate.API/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=ApiTemplateDb;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Host=localhost;Database=apitemplatedb;Username=postgres;Password=postgres"
   },
   "Serilog": {
     "MinimumLevel": {
