--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,8 +24,9 @@ jobs:
     - name: Build
       run: dotnet build --no-restore --configuration Release
       
-    - name: Test
+    - name: Test with Testcontainers
       run: dotnet test --no-build --configuration Release --verbosity normal
+      # Testcontainers will automatically use Docker available on GitHub Actions runners
       
   docker:
     runs-on: ubuntu-latest
